Fixed user__add-picture button size on small screens

--- a/blocks/user.css
+++ b/blocks/user.css
@@ -70,6 +70,7 @@
 
 .user__add-picture {
   flex-shrink: 0;
+  padding: 0;
   width: 150px;
   height: 50px;
   background: transparent url("../images/add-button.svg") center no-repeat;
@@ -104,6 +105,7 @@
 
   .user__add-picture {
     background-size: 16px;
+    max-width: 87%;
   }
 }
 
